--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "evrythng",
-  "version": "2.0.8",
+  "version": "2.1.1",
   "main": "dist/evrythng.js",
   "description": "Javascript SDK to communicate with EVRYTHNG REST API",
   "repository": {
     "type": "git",
-    "url": "git://github.com/evrythng/evrythng.js.git"
+    "url": "https://github.com/evrythng/evrythng.js.git"
   },
   "keywords": [
     "evrythng",
@@ -13,7 +13,11 @@
     "library",
     "thng",
     "thngs",
-    "evt"
+    "evt",
+    "iot",
+    "internet of things",
+    "wot",
+    "web of things"
   ],
   "author": "EVRYTHNG Ltd.",
   "licenses": [
@@ -25,48 +29,5 @@
   "readmeFilename": "README.md",
   "dependencies": {
     "w3c-xmlhttprequest": "ykzts/node-xmlhttprequest"
-  },
-  "devDependencies": {
-    "almond": "^0.3.0",
-    "dateformat": "^1.0.8-1.2.3",
-    "groc": "^0.7.0",
-    "grunt": "^0.4.4",
-    "grunt-aws-s3": "^0.8.1",
-    "grunt-bower-release": "git://github.com/YaaL/grunt-bower-release.git",
-    "grunt-checkrepo": "^0.1.0",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-compress": "^0.9.1",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-jasmine": "^0.8.1",
-    "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-requirejs": "^0.4.3",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-git": "^0.2.11",
-    "grunt-groc": "^0.4.5",
-    "grunt-jasmine-node": "^0.2.1",
-    "grunt-karma": "^0.8.2",
-    "grunt-publish": "0.0.5",
-    "grunt-text-replace": "^0.3.12",
-    "grunt-version": "^0.3.0",
-    "grunt-volo": "0.0.2",
-    "ibrik": "^1.1.1",
-    "istanbul": "^0.2.11",
-    "jasmine-ajax": "^2.0.1",
-    "karma": "^0.12.14",
-    "karma-chrome-launcher": "^0.1.2",
-    "karma-coverage": "^0.2.1",
-    "karma-html-reporter": "^0.2.3",
-    "karma-jasmine": "^0.2.2",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-requirejs": "^0.2.1",
-    "karma-sauce-launcher": "^0.2.8",
-    "load-grunt-tasks": "^0.4.0",
-    "minimatch": "^0.3.0",
-    "native-promise-only": "0.7.5-e",
-    "requirejs": "^2.1.11"
-  },
-  "scripts": {
-    "test": "grunt test; grunt test:dist;"
   }
 }
