--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evrythng",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "main": "lib/evrythng.js",
   "description": "Javascript SDK to communicate with EVRYTHNG REST API",
   "repository": {
@@ -9,15 +9,16 @@
   },
   "keywords": [
     "evrythng",
-    "sdk",
-    "library",
+    "everything",
     "thng",
-    "thngs",
     "evt",
     "iot",
     "internet of things",
     "wot",
-    "web of things"
+    "web of things",
+    "thng-hub",
+    "hub",
+    "mqtt"
   ],
   "author": "EVRYTHNG Ltd.",
   "licenses": [
