--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,15 @@
 {
   "name": "evrythng",
-  "version": "3.1.2",
+  "version": "3.2.0",
   "main": "dist/evrythng.js",
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
     "test",
-    "tools",
-    "lib",
+    "plugins",
     "src",
     "*.html",
-    "build.txt",
-    "DEVELOPMENT.md",
-    "karma*.js",
     "Gruntfile.js"
   ],
   "license": "Apache-2.0",
