feat(test): unit tests and integration tests with Jasmine, UMD, ES6 and Node.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "evrythng.js",
+  "name": "evrythng",
   "version": "5.0.0",
   "description": "Official Javascript SDK for the EVRYTHNG API.",
   "main": "lib/evrythng.polyfill.js",
@@ -11,9 +11,15 @@
     "test:unit": "karma start karma.config.unit.js",
     "test:int:globals": "karma start karma.config.int.globals.js",
     "test:int:amd": "karma start karma.config.int.amd.js",
-    "test:integration": "npm run test:int:globals && npm run test:int:amd",
+    "test:int:cjs": "karma start karma.config.int.cjs.js",
+    "test:int:browser": "npm run test:int:globals && npm run test:int:amd && npm run test:int:cjs",
+    "test:int:node": "jasmine JASMINE_CONFIG_PATH=jasmine.config.int.node.js",
+    "test:int:umd": "npm run test:int:browser && npm run test:int:node",
+    "test:int:es6": "karma start karma.config.int.es6.js",
+    "test:integration": "npm run test:int:umd && npm run test:int:es6",
     "pretest:integration": "npm run build",
     "test": "npm run test:unit && npm run test:integration",
+    "prepublish": "npm run test",
     "docker:build": "docker build -t evrythng.js .",
     "docker:test": "docker run --security-opt seccomp:unconfined evrythng.js docker/test.sh"
   },
@@ -45,6 +51,7 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-rollup": "^2.5.1",
     "istanbul": "^0.4.5",
+    "jasmine": "^2.5.2",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
