--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,17 @@
 {
   "name": "evrythng",
-  "version": "5.0.0",
-  "homepage": "https://github.com/evrythng/evrythng.js",
+  "description": "Official Javascript SDK for the EVRYTHNG API.",
+  "main": "dist/evrythng.js",
   "authors": [
     "EVRYTHNG Ltd. <support@evrythng.com>"
   ],
-  "description": "Official Javascript SDK for the EVRYTHNG API.",
-  "main": "lib/evrythng.js",
   "moduleType": [
     "amd",
     "es6",
     "globals",
     "node"
   ],
+  "license": "Apache-2.0",
   "keywords": [
     "evrythng",
     "evt",
@@ -21,15 +20,12 @@
     "internet of things",
     "web of things"
   ],
-  "license": "Apache-2.0",
+  "homepage": "https://github.com/evrythng/evrythng.js",
   "private": true,
   "ignore": [
     "**/.*",
-    "node_modules",
-    "bower_components",
     "test",
     "docker",
-    "report",
     "Dockerfile",
     "*.js"
   ],
