--- a/package.json
+++ b/package.json
@@ -4,21 +4,11 @@
   "description": "Official Javascript SDK for the EVRYTHNG API.",
   "main": "dist/evrythng.polyfill.js",
   "jsnext:main": "dist/evrythng.es6.polyfill.js",
+  "browser": "dist/evrythng.js",
   "scripts": {
-    "lint": "standard",
-    "build": "node build.js",
-    "prebuild": "npm run lint",
-    "test:unit": "karma start test/karma.config.unit.js",
-    "test:int:globals": "karma start test/karma.config.int.globals.js",
-    "test:int:amd": "karma start test/karma.config.int.amd.js",
-    "test:int:cjs": "karma start test/karma.config.int.cjs.js",
-    "test:int:browser": "npm run test:int:globals && npm run test:int:amd && npm run test:int:cjs",
-    "test:int:node": "jasmine JASMINE_CONFIG_PATH=test/jasmine.config.int.node.js",
-    "test:int:umd": "npm run test:int:browser && npm run test:int:node",
-    "test:int:es6": "karma start test/karma.config.int.es6.js",
-    "test:integration": "npm run test:int:umd && npm run test:int:es6",
-    "pretest:integration": "npm run build",
-    "test": "npm run test:unit && npm run test:integration",
+    "lint": "gulp lint",
+    "build": "gulp build",
+    "test": "gulp test",
     "prepublish": "npm run build",
     "docker:build": "docker build -t evrythng.js .",
     "docker:test": "docker run --security-opt seccomp:unconfined evrythng.js docker/test.sh"
@@ -45,46 +35,11 @@
     "isomorphic-fetch": "^2.2.1"
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.1",
-    "babel-plugin-external-helpers": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
-    "istanbul": "^0.4.5",
-    "jasmine": "^2.5.2",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-junit-reporter": "^1.1.0",
-    "karma-requirejs": "^1.1.0",
-    "karma-rollup-plugin": "^0.2.4",
-    "lodash-es": "^4.17.2",
-    "requirejs": "^2.3.2",
-    "rollup": "^0.36.4",
-    "rollup-plugin-babel": "^2.6.1",
-    "rollup-plugin-commonjs": "^5.0.5",
-    "rollup-plugin-istanbul": "^1.1.0",
-    "rollup-plugin-json": "^2.0.2",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-plugin-uglify": "^1.0.1",
-    "standard": "^8.6.0",
-    "uglify-js": "mishoo/UglifyJS2#harmony"
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-evrythng-tasks": "0.0.2",
+    "lodash-es": "^4.17.2"
   },
   "standard": {
-    "parser": "babel-eslint",
-    "ignore": [
-      "lib"
-    ],
-    "globals": [
-      "fetch"
-    ]
-  },
-  "babel": {
-    "presets": [
-      ["es2015", { "modules": false }]
-    ],
-    "plugins": [
-      "external-helpers"
-    ]
+    "globals": "fetch"
   }
 }
