feat(Batch): add Batch and Task entities.

--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
   "devDependencies": {
     "fetch-mock": "^5.8.1",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-evrythng-tasks": "^0.0.8",
-    "lodash-es": "^4.17.2"
+    "gulp-evrythng-tasks": "^0.0.9",
+    "lodash-es": "^4.17.2",
+    "systemjs": "^0.20.12",
+    "systemjs-plugin-babel": "^0.0.21"
   },
   "standard": {
     "globals": [
