--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "evrythng",
-  "version": "5.0.0-pre.5",
+  "version": "5.0.0",
   "description": "Official Javascript SDK for the EVRYTHNG API.",
-  "main": "dist/evrythng.polyfill.js",
-  "module": "dist/evrythng.es.polyfill.js",
-  "browser": {
-    "./dist/evrythng.es.polyfill.js": "./dist/evrythng.es.js"
-  },
+  "main": "./dist/evrythng.node.js",
+  "module": "./src/evrythng.polyfill.js",
   "scripts": {
     "lint": "gulp lint",
-    "build": "gulp build",
+    "build": "webpack --config webpack.config.js --mode production",
+    "build-dev": "webpack --config webpack.config.js --mode development",
     "test": "gulp test",
     "deploy": "sh ./node_modules/gulp-evrythng-tasks/bin/deploy.sh"
   },
@@ -19,7 +17,6 @@
   },
   "keywords": [
     "evrythng",
-    "evt",
     "iot",
     "wot",
     "internet of things",
@@ -35,12 +32,13 @@
     "isomorphic-fetch": "^2.2.1"
   },
   "devDependencies": {
+    "acorn": "^6.1.1",
+    "ajv": "^6.10.0",
     "fetch-mock": "^5.8.1",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-evrythng-tasks": "^0.0.13",
     "lodash-es": "^4.17.2",
-    "systemjs": "^0.20.12",
-    "systemjs-plugin-babel": "^0.0.21"
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "standard": {
     "globals": [
