Directly use standard

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "5.0.0",
   "description": "Official Javascript SDK for the EVRYTHNG API.",
   "main": "./dist/evrythng.node.js",
+  "browser": "./dist/evrythng.browser.js",
   "module": "./src/evrythng.polyfill.js",
   "scripts": {
-    "lint": "gulp lint",
+    "lint": "standard",
     "build": "webpack --config webpack.config.js --mode production",
     "build-dev": "webpack --config webpack.config.js --mode development",
     "test": "gulp test",
@@ -44,7 +45,6 @@
       "fetch",
       "Response",
       "FormData"
-    ],
-    "parser": "babel-eslint"
+    ]
   }
 }
