--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "homepage": "https://github.com/evrythng/evrythng.js#readme",
   "dependencies": {
-    "isomorphic-fetch": "^2.2.1"
+    "isomorphic-fetch": "^2.2.1",
+    "node-fetch": "^2.3.0"
   },
   "devDependencies": {
     "acorn": "^6.1.1",
