--- a/examples/browser-npm-browserify/package.json
+++ b/examples/browser-npm-browserify/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "evrythng.js-browser-npm-es-webpack-example",
+  "name": "evrythng.js-browser-npm-browserify",
   "version": "1.0.0",
   "main": "dist/index.js",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "dependencies": {
-    "browserify": "^14.3.0",
+    "browserify": "^16.2.3",
     "evrythng": "file:../.."
   },
   "scripts": {
-    "postinstall": "mkdir dist && ./node_modules/.bin/browserify index.js -o dist/index.js"
+    "postinstall": "npm run build",
+    "build": "mkdir -p dist && ./node_modules/.bin/browserify index.js -o dist/index.js"
   }
 }
