--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --config webpack.config.js --mode production",
     "build-dev": "webpack --config webpack.config.js --mode development",
     "show-notice": "echo '\n    New to evrythng.js v5? Make sure to read the migration guide:\n    https://developers.evrythng.com/docs/evrythngjs-v500\n'",
-    "postinstall": "npm run --silent show-notice"
+    "postinstall": "npm run --silent show-notice",
+    "test": "test/e2e/node_modules/.bin/mocha test/e2e/index.spec.js"
   },
   "repository": {
     "type": "git",
