Mock E2E test API requests, add CircleCI  (#21)
* Prepare for mocking the API

Work on mocking API

With #20, prepare scopes using only mock responses

* Mock entities tests

Finish mocking app user tests

Mock actions tests

Mock action type tests

Mock collections tests

Mock commissionState tests

Mock places tests

Mock product and properties tests

Mock roles tests

Mock thngs tests

Mock accounts and accesses tests

Mock redirector and ADI Order tests

Mock application tests

Mock batches and files tests

Mock domains locations and permissions tests

* Prevent scopes reading access twice (#20)

* Clarify scope init from readAccess, prevent Operator reading access twice

* Properly implement one init promise chain per scope

* Mock more entities tests

* Mock ActionApp and Device scope tests

* Mock reactor tests

Mock redirections tests

Mock secretKey and shortDomains tests

Mock tasks tests

* Mock misc tests

Mock api() tests

Mock find tests

Mock pages tests

Mock paramSetters tests

Mock rescope tests

Mock stream tests

Mock upsert and use tests

* Remove unuset teardown() function

* npm audit fix

Update package files

npm audit fix

* Add .circleci/config.yml

Update .circleci/config.yml

Update .circleci/config.yml

Update .circleci/config.yml

Update .circleci/config.yml

Update .circleci/config.yml

* Move test/e2e/package.json to top level

* Simplify .circleci/config.yml

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --config webpack.config.js --mode production",
     "build-dev": "webpack --config webpack.config.js --mode development",
     "show-notice": "echo '\n    New to evrythng.js v5? Make sure to read the migration guide:\n    https://developers.evrythng.com/docs/evrythngjs-v500\n'",
-    "postinstall": "npm run --silent show-notice"
+    "postinstall": "npm run --silent show-notice",
+    "test": "mocha test/e2e/index.spec.js"
   },
   "repository": {
     "type": "git",
@@ -39,8 +40,12 @@
     "acorn": "^6.1.1",
     "ajv": "^6.10.0",
     "babel-loader": "^8.0.5",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "fetch-mock": "^5.8.1",
     "lodash-es": "^4.17.2",
+    "mocha": "^6.2.0",
+    "nock": "^11.3.3",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   },
