--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evrythng",
-  "version": "5.7.1",
+  "version": "5.8.0",
   "description": "Official Javascript SDK for the EVRYTHNG API.",
   "main": "./dist/evrythng.node.js",
   "scripts": {
@@ -9,7 +9,8 @@
     "build-dev": "webpack --config webpack.config.js --mode development",
     "show-notice": "echo '\n    New to evrythng.js v5? Make sure to read the migration guide:\n    https://developers.evrythng.com/docs/evrythngjs-v500\n'",
     "postinstall": "npm run --silent show-notice",
-    "test": "mocha test/e2e/index.spec.js"
+    "test": "mocha test/e2e/index.spec.js",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -43,7 +44,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "fetch-mock": "^5.8.1",
-    "lodash-es": "^4.17.2",
+    "lodash-es": "^4.17.15",
     "mocha": "^6.2.0",
     "nock": "^11.3.3",
     "webpack": "^4.29.6",
