--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "homepage": "https://github.com/evrythng/evrythng.js#readme",
   "dependencies": {
     "@babel/runtime": "^7.4.3",
-    "isomorphic-fetch": "^3.0.0",
+    "cross-fetch": "^3.0.6",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
