--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "show-notice": "echo '\n    New to evrythng.js v5? Make sure to read the migration guide:\n    https://developers.evrythng.com/docs/evrythngjs-v500\n'",
     "postinstall": "npm run --silent show-notice",
     "test": "mocha test/e2e/index.spec.js",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm test && npm run build",
+    "check-version": "node test/check-version.js"
   },
   "repository": {
     "type": "git",
