--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build-dev": "webpack --config webpack.config.js --mode development",
     "show-notice": "echo '\n    New to evrythng.js v5? Make sure to read the migration guide:\n    https://developers.evrythng.com/docs/evrythngjs-v500\n'",
     "postinstall": "npm run --silent show-notice",
-    "test": "mocha test/integration/testsForApiVersion2.spec.js",
+    "test": "mocha test/integration/**.spec.js",
     "prepublishOnly": "npm run build"
   },
   "repository": {
