--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Official Javascript SDK for the EVRYTHNG API.",
   "main": "./dist/evrythng.node.js",
   "scripts": {
-    "lint": "eslint --fix --max-warnings 0 --ext .js .",
+    "eslint": "eslint --fix --max-warnings 0 --ext .js .",
     "format": "./node_modules/.bin/prettier --write '**/*.{js,json,md,yaml,yml}'",
     "build": "webpack --config webpack.config.js --mode production",
     "build-dev": "webpack --config webpack.config.js --mode development",
@@ -15,7 +15,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged -p false"
     }
   },
   "lint-staged": {
@@ -74,6 +74,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "fetch-mock": "^9.10.7",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.2",
     "lodash-es": "^4.17.15",
     "mocha": "^7.2.0",
     "nock": "^11.3.3",
