--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-dev": "webpack --config webpack.config.js --mode development",
     "show-notice": "echo '\n    New to evrythng.js v5? Make sure to read the migration guide:\n    https://developers.evrythng.com/docs/evrythngjs-v500\n'",
     "postinstall": "npm run --silent show-notice",
-    "test": "mocha test/e2e/index.spec.js",
+    "test": "mocha test/integration/index.spec.js",
     "prepublishOnly": "npm run build"
   },
   "husky": {
@@ -57,6 +57,7 @@
   "dependencies": {
     "@babel/runtime": "^7.4.3",
     "cross-fetch": "^3.0.6",
+    "lint-staged": "^10.5.2",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
@@ -73,9 +74,9 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "esm": "^3.2.25",
     "fetch-mock": "^9.10.7",
     "husky": "^4.3.0",
-    "lint-staged": "^10.5.2",
     "lodash-es": "^4.17.15",
     "mocha": "^7.2.0",
     "nock": "^11.3.3",
