--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "mocha test/integration/**.spec.js",
     "test:unit": "mocha --require esm test/unit/**.spec.js",
     "test:e2e": "mocha test/e2e/**.spec.js",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build && npm test"
   },
   "husky": {
     "hooks": {
