--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evrythng",
-  "version": "6.0.3",
+  "version": "6.0.5",
   "description": "Official Javascript SDK for the EVRYTHNG API.",
   "main": "./dist/evrythng.node.js",
   "scripts": {
@@ -13,7 +13,7 @@
     "test": "mocha test/integration/**.spec.js",
     "test:unit": "mocha --require esm test/unit/**.spec.js",
     "test:e2e": "mocha test/e2e/**.spec.js",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build && npm test"
   },
   "husky": {
     "hooks": {
@@ -101,11 +101,11 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.2",
     "lodash-es": "^4.17.15",
-    "mocha": "^7.2.0",
+    "mocha": "^9.1.3",
     "nock": "^11.3.3",
     "prettier": "^2.2.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   },
   "standard": {
     "globals": [
